# docu-buddy-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init-mongo.js  pyproject.toml  quick-test.sh  test-persistence.sh
app/: main.py
app/core/: config.py
app/memory/: conversation_memory.py  mongo_memory.py
app/models/: mongodb.py  schemas.py
app/retrieval/: retrieval_service.py
app/routers/: chat.py
app/scraper/: document_scraper.py
app/services/: chat_service.py
tests/: test_api.py  test_memory.py  test_scraper.py
