[project]
name = "docu-buddy-backend"
version = "0.1.0"
description = "Backend for documentation assistant with RAG capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.23.0",
    "openai>=1.3.0",
    "chromadb>=1.3.6",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.12.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-multipart>=0.0.6",
    "langchain-openai>=1.1.7",
    "langchain>=1.2.6",
    "langgraph>=1.0.6",
    "langchain-chroma>=1.1.0",
    "langchain-text-splitters>=1.1.0",
    "langchain-community>=0.4.1",
    "motor>=3.5.0",
    "beanie>=1.26.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.28.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
